--- a/github.com/src/f2.html
+++ b/github.com/src/f2.html
@@ -1,55 +1,17 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>考勤管理</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>考勤管理</title>
 </head>
 <body>
-	<h1>考勤管理系统</h1>
-	
-	<form>
-		<label>员工编号：</label>
-		<input type="text" name="employee_id"><br><br>
-		
-		<label>日期：</label>
-		<input type="date" name="date"><br><br>
-		
-		<label>上班时间：</label>
-		<input type="time" name="start_time"><br><br>
-		
-		<label>下班时间：</label>
-		<input type="time" name="end_time"><br><br>
-		
-		<input type="submit" value="提交">
-	</form>
-	
-	<h2>考勤记录</h2>
-	
-	<table border="1">
-		<tr>
-			<th>员工编号</th>
-			<th>日期</th>
-			<th>上班时间</th>
-			<th>下班时间</th>
-			<th>操作</th>
-		</tr>
-		<tr>
-			<td>001</td>
-			<td>2023-03-28</td>
-			<td>09:00:00</td>
-			<td>18:00:00</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-		<tr>
-			<td>002</td>
-			<td>2023-03-28</td>
-			<td>08:30:00</td>
-			<td>17:30:00</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-	</table>
-	
+    <div>
+        <a href="f2-2/f2.html">工作时间</a>
+    </div>
+    <div>
+        <a href="f2-2/f2.html">出勤状态</a>
+    </div>
 </body>
 </html>
-
