--- a/github.com/src/f3.html
+++ b/github.com/src/f3.html
@@ -1,52 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>绩效管理</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>绩效管理</title>
 </head>
 <body>
-	<h1>绩效管理系统</h1>
-	
-	<h2>添加绩效</h2>
-	<form>
-		<label>员工姓名：</label>
-		<input type="text" name="name"><br><br>
-		
-		<label>绩效类型：</label>
-		<select name="type">
-			<option value="销售额">销售额</option>
-			<option value="客户满意度">客户满意度</option>
-			<option value="工作效率">工作效率</option>
-		</select><br><br>
-		
-		<label>绩效值：</label>
-		<input type="text" name="value"><br><br>
-		
-		<input type="submit" value="提交">
-	</form>
-	
-	<h2>绩效列表</h2>
-	
-	<table border="1">
-		<tr>
-			<th>员工姓名</th>
-			<th>绩效类型</th>
-			<th>绩效值</th>
-			<th>操作</th>
-		</tr>
-		<tr>
-			<td>张三</td>
-			<td>销售额</td>
-			<td>10000</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-		<tr>
-			<td>李四</td>
-			<td>工作效率</td>
-			<td>90%</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-	</table>
-	
+    <div>
+        <a href="f3-3/f3.html">工作质量</a>
+    </div>
 </body>
 </html>
