--- a/github.com/src/index.html
+++ b/github.com/src/index.html
@@ -12,15 +12,15 @@
     <!-- 账户管理 考勤管理 绩效管理 -->
     <div class="main_1">
         <img src="../img/f1.jpg"   style="width: 2%;">
-        <a href="src/f1.html"  >账户管理</a>
+        <a href="f1-1/f1.html"  >账户管理</a>
     </div>
     <div class="main_1">
         <img src="../img/f1.jpg"   style="width: 2%;">
-        <a href="src/f2.html"  >考勤管理</a>
+        <a href="f2-2/f2.html"  >考勤管理</a>
     </div>
     <div class="main_1">
         <img src="../img/f1.jpg"   style="width: 2%;">
-        <a href="src/f3.html"  >绩效管理</a>
+        <a href="f3-3/f3.html"  >绩效管理</a>
     </div>
 </body>
 </html>
