--- a/github.com/src/f1-1/f1.html
+++ b/github.com/src/f1-1/f1.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>账户管理</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>账户管理系统</title>
 </head>
 <body>
-	<h1>账户管理系统</h1>
-	
-	<form>
-		<label>用户名：</label>
-		<input type="text" name="username"><br><br>
-		
-		<label>密码：</label>
-		<input type="password" name="password"><br><br>
-		
-		<label>确认密码：</label>
-		<input type="password" name="confirm_password"><br><br>
-		
-		<input type="submit" value="注册">
-	</form>
-	
-	<h2>用户列表</h2>
-	
-	<table border="1">
-		<tr>
-			<th>用户名</th>
-			<th>操作</th>
-		</tr>
-		<tr>
-			<td>john123</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-		<tr>
-			<td>jane456</td>
-			<td><button>编辑</button> <button>删除</button></td>
-		</tr>
-	</table>
-	
+    <div>
+        <a href="f1-1.html">注册登入</a>
+    </div>
+    <div>
+        <a href="f1-1.html">任务安排</a>
+    </div>
+   
 </body>
 </html>
